--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="split-content reveal reveal-left">
                     <h2>The Art of Perfumery</h2>
                      <hr class="section-divider">
-                    <p>At Aura Scents, we believe that fragrance is more than just a scent; it's an invisible accessory, a mood enhancer, a memory trigger. We meticulously blend the finest natural ingredients from around the world to create unique olfactory experiences.</p>
+                    <p>At Harveil, we believe that fragrance is more than just a scent; it's an invisible accessory, a mood enhancer, a memory trigger. We meticulously blend the finest natural ingredients from around the world to create unique olfactory experiences.</p>
                     <p>Our journey began with a passion for capturing moments and emotions in a bottle. Each fragrance tells a story, designed to resonate with your individual essence and leave a lasting impression.</p>
                 </div>
                 <div class="split-image reveal reveal-right">
